--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "Proof of concept graphql",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "json:server": "json-server --watch db.json",
+    "dev": "nodemon server.js"
   },
   "repository": {
     "type": "git",
@@ -17,9 +19,14 @@
   },
   "homepage": "https://github.com/eselopio/graphqlPOC#readme",
   "dependencies": {
+    "axios": "^0.18.0",
     "express": "^4.16.3",
     "express-graphql": "^0.6.12",
     "graphql": "^0.13.2",
+    "json-server": "^0.14.0",
     "lodash": "^4.17.10"
+  },
+  "devDependencies": {
+    "nodemon": "^1.18.1"
   }
 }
